fixes youtube video cut off on home page

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -36,12 +36,12 @@ footer {
 }
 
 .carousel {
-	height: 600px;
+	height: 840px;
 	width: 1100px;
 }
 
 .carousel-item {
-	height: 600px;
+	height: 850px;
 	border-radius: 20px;
 }
 
